[gd_scene load_steps=8 format=3 uid="uid://cvqoiyjbqrpax"]

[ext_resource type="Script" uid="uid://bevpy766gw0si" path="res://scenes/bulletin_board.gd" id="1_5sj0m"]
[ext_resource type="Texture2D" uid="uid://bbn0b6akw3a0e" path="res://assets/背景底圖.png" id="1_hatms"]
[ext_resource type="Texture2D" uid="uid://bl62odeokxdah" path="res://assets/任務紙張圖片_無文字版.png" id="1_kyl1q"]
[ext_resource type="Script" uid="uid://pd0224wsqn6e" path="res://label.gd" id="2_hatms"]
[ext_resource type="Texture2D" uid="uid://bxejeugsghlcx" path="res://assets/木製公告板.png" id="3_5sj0m"]
[ext_resource type="Texture2D" uid="uid://rq2m58yqowep" path="res://assets/window_290x290.png" id="6_iqmqc"]
[ext_resource type="Texture2D" uid="uid://p675b5eyaeng" path="res://assets/home_256x256.png" id="7_s6jiy"]

[node name="NoticeItem" type="Control"]
layout_mode = 3
anchor_left = 0.784722
anchor_top = 0.54321
anchor_right = 0.784722
anchor_bottom = 0.604938
offset_left = -320.0
offset_top = 248.0
offset_right = -320.0
offset_bottom = 248.0
script = ExtResource("1_5sj0m")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -11.36
anchor_bottom = 4.0
offset_left = 86.0
offset_top = 1135.99
offset_right = 346.0
offset_bottom = -143.997

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NoticeIcon(TextureRect)" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer"]
position = Vector2(-113.5, -295.998)
scale = Vector2(1.38281, 1.13542)
texture = ExtResource("1_hatms")

[node name="wooden_bulletin_board" type="Sprite2D" parent="MarginContainer/HBoxContainer"]
position = Vector2(-119.44, -298.5)
scale = Vector2(1.01941, 1.02799)
texture = ExtResource("3_5sj0m")

[node name="Task_paper_image_without_text" type="Sprite2D" parent="MarginContainer/HBoxContainer"]
position = Vector2(-566, -112)
scale = Vector2(0.368165, 0.337891)

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer/Task_paper_image_without_text"]
offset_left = 262.111
offset_top = -1823.07
offset_right = 1348.11
offset_bottom = -687.069
texture_normal = ExtResource("1_kyl1q")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Task_paper_image_without_text/TextureButton"]
modulate = Color(0.38216, 0.160023, 0.00754553, 1)
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
offset_left = 347.67
offset_top = 473.525
offset_right = 987.67
offset_bottom = 914.525
theme_override_font_sizes/font_size = 180
text = "Task"
script = ExtResource("2_hatms")

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/HBoxContainer/Task_paper_image_without_text"]
offset_left = 1131.29
offset_top = -1823.07
offset_right = 2261.29
offset_bottom = -663.069
texture_normal = ExtResource("1_kyl1q")
stretch_mode = 0

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/Task_paper_image_without_text/TextureButton2"]
modulate = Color(0.38216, 0.160023, 0.00754553, 1)
custom_minimum_size = Vector2(256, 256)
layout_mode = 0
offset_left = 325.938
offset_top = 497.203
offset_right = 1005.94
offset_bottom = 753.203
theme_override_font_sizes/font_size = 180
text = "Jokes"
script = ExtResource("2_hatms")

[node name="Transparent_Button_2D" type="Sprite2D" parent="MarginContainer/HBoxContainer"]
position = Vector2(-566, -112)
scale = Vector2(0.368165, 0.337891)

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/HBoxContainer/Transparent_Button_2D"]
offset_left = 436.0
offset_top = -189.0
offset_right = 1044.0
offset_bottom = 734.0

[node name="Farm_Button" type="TextureButton" parent="."]
layout_mode = 2
offset_left = -455.5
offset_top = -1189.0
offset_right = -165.5
offset_bottom = -899.0
texture_normal = ExtResource("6_iqmqc")

[node name="Home_Button" type="TextureButton" parent="."]
layout_mode = 2
offset_left = -719.5
offset_top = -1176.0
offset_right = -463.5
offset_bottom = -920.0
texture_normal = ExtResource("7_s6jiy")

[connection signal="pressed" from="MarginContainer/HBoxContainer/Task_paper_image_without_text/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Task_paper_image_without_text/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Transparent_Button_2D/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="Farm_Button" to="." method="_on_farm_button_pressed"]
[connection signal="pressed" from="Home_Button" to="." method="_on_home_button_pressed"]
